[package]
name = "cdl-runner"
version = "0.2.0"
authors = [
  "Canvas Data Support Team <canvasdatahelp@instructure.com>",
  "Instructure Engineering <eng@instructure.com>",
  "Eric Coan <ecoan@rust-lang.life>"
]

[features]
default = [ "postgres_compat", "mysql_compat" ]
postgres_compat = [ "postgres", "r2d2_postgres" ]
mysql_compat = [ "mysql" ]

[dependencies]
base64 = "0.6"
chrono = { version = "0.4", features = [ "serde" ] }
config = "0.6"
error-chain = "0.10.0"
env_logger = "*"
flate2 = { version = "0.2", features = ["zlib"], default-features = false }
futures = "0.1"
log = "*"
glob = "0.2"
hyper = "0.11"
hyper-tls = "0.1"
lazy_static = "0.2"
r2d2 = "0.7"
regex = "0.2"
ring = "0.11"
rocksdb = "0.6"
native-tls = "0.1.4"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tokio-core = "0.1"

# Postgres Deps
postgres = { version = "*", optional = true }
r2d2_postgres = { version = "*", optional = true }

# Mysql Deps
mysql = { version = "11.3.1", optional = true, features = ["ssl"] }

